# Neural-Radiosity-Falcor

./: .gitignore  CMakeLists.txt  README.md
Source/RenderPasses/: CMakeLists.txt
Source/RenderPasses/CollectData/: CMakeLists.txt  CollectData.cpp  CollectData.h  CollectData.rt.slang  CollectDataParams.slang  ComputeArea.cs.slang
Source/RenderPasses/MinimalPathTracer/: CMakeLists.txt  MinimalPathTracer.rt.slang
Source/RenderPasses/NeuralRadiosity/: CMakeLists.txt  Config.h  Network.cu  Network.h  NeuralRadiosity.cpp  NeuralRadiosity.h  Params.slang  ResolvePass.cs.slang  Tracer.rt.slang
dumped_data/ganesha/frame_0000/: Mogwai.CollectData.color.1.exr  Mogwai.CollectData.diff.1.exr  Mogwai.CollectData.normalW.1.exr  Mogwai.CollectData.posW.1.exr  Mogwai.CollectData.wiW.1.exr
media/Arcade/: Arcade.pyscene  CHANGELOG.txt
media/inv_rendering_scenes/: bunny_init.pyscene  bunny_ref.pyscene  sphere_init.pyscene  spheres_material_init.pyscene  spheres_material_ref.pyscene
media/test_images/: LICENSE.txt
media/test_scenes/: bsdf_optimizer.pyscene  bunny.pyscene  bunny_war_diff_pt.pyscene  convergence_test.pyscene  cornell_box.pyscene  cornell_box_bunny.pyscene  cornell_box_displaced.pyscene  geometry_types.pyscene  material_test.pyscene  nested_dielectrics.pyscene  smoke.pyscene  sphere_array.pyscene  teapot.pyscene  tutorial.pyscene  two_volumes.pyscene  volume_test.pyscene  volume_transmittance_test.pyscene  winding_test.pyscene
scripts/: CollectData.py  NeuralRadiosity.py
train_radiosity/: CMakeLists.txt  composite.json  hash.json  identity.json  train.cu
(+7020 files in other folders)
